fix header z-indexes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,7 +197,7 @@ table td { border: 1px solid #999999; }
 
 .bottom-fade { pointer-events: none; position: fixed; width: 100%; height: 30vh; bottom: 0; left: 0; z-index: 0; background: black; background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 100%); }
 
-.tagline { display: inline-block; position: absolute; width: 100%; left: 0; font-size: 19px; text-align: center; margin: 0 auto; text-transform: lowercase; }
+.tagline { display: inline-block; position: absolute; width: 100%; left: 0; font-size: 19px; text-align: center; margin: 0 auto; text-transform: lowercase; z-index: 0; }
 
 .tagline a { color: #fff; text-decoration: none; }
 
@@ -217,7 +217,7 @@ table td { border: 1px solid #999999; }
 
 .site-title, .site-title:visited { color: black; }
 
-.site-nav { pointer-events: auto; position: absolute; top: 15px; right: 60px; background: transparent; float: right; line-height: 61.1325px; }
+.site-nav { pointer-events: auto; position: absolute; top: 15px; right: 60px; background: transparent; float: right; line-height: 61.1325px; z-index: 2; }
 
 .site-nav .nav-trigger { display: none; }
 
